syntax = "proto3";

package pharmacyService;
option go_package = "api/pharmacyproto";

import "validate/validate.proto";
import "google/protobuf/empty.proto";


// For error handling use "google.golang.org/grpc/status"
message Pharmacy {
  int64 id = 1;
  string name = 2;
  Address address = 3;
}

message NewPharmacy {
  string name = 1;
  Address address = 2;
}

message Address {
  string city = 1;
  string street = 2;
  string house = 3;
}

message PaginationRequest {
  int64 last_id = 1 [(validate.rules).int64.gte = 0];
  int64 limit = 2 [(validate.rules).int64.lte = 5000];
}

message Pharmacies {
  repeated Pharmacy pharmacies = 1;
}

service PharmacyService {
  rpc CreatePharmacy(NewPharmacy) returns (google.protobuf.Empty);
  rpc GetPharmacies(PaginationRequest) returns (Pharmacies);
}